# smartie3000

./: .gitignore  README.md  pyproject.toml
scripts/: probe.py
src/artie_mcp/: client.py  strokes.py  svg.py
src/smartie3000/: __init__.py  client.py  server.py  strokes.py  svg.py  text.py
tests/: fake_artie.py  test_client.py  test_pose.py  test_rounding.py  test_server_run.py  test_strokes.py  test_svg_and_text.py
